--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
   </head>
 
   <!-- <body class="bg-color"> -->
-
+<body class="bg-image">
 
 <!-- Hello+ Name -->
+  <div>
     <div class="from-slate-200">
-        <div>
-            <h2 class="text-2xl pl-60 decoration-4 pt-72">
+        <div class="intro">
+            <h2 class="text-2xl mx-auto text-zinc-300 pt-72">
                 Hello! This is 
             </h2> 
-            <h1 class="text-5xl decoration-1 pt-4 pl-52">
+            <h1 class="text-5xl mx-auto text-red-700">
                 Faozia Islam
             </h1> 
         </div>
-    </div> 
+        <div class="pic">
+          <img src="photo-1525134479668-1bee5c7c6845-removebg-preview.png">
+        </div>
+        <div class="shape">
+          <img src="png-transparent-triangle-illustration-golden-triangle-golden-triangle-frame-angle-golden-frame-simple-removebg-preview.png">
+        </div>
+    
+  </div>
+  <!-- <img class="port" src="1_UZjrurSi-eoitQDFkMlmlw-removebg-preview (1).png">  -->
 <!--     
 short introduction
     <div class="div1">
@@ -33,7 +42,7 @@ short introduction
     </div>
 
 
-<!-- About information -->
+ About information -->
     <!-- <h2 class="dream-big">
       Dream Big</h2>
     <h4 class="become-web-dev">
@@ -75,13 +84,13 @@ short introduction
           And uploaded the content. It was fun working at
           Programming Hero.</h3>
 
-
-<!-- footer -->
-      <footer class="footer">
-         © Faozia Islam 2021, a self portfolio buildling initiative. </footer> --> -->
-
+ footer -->
+    <!-- <footer class="footer">
+      © Faozia Islam 2021, a self portfolio buildling initiative. </footer> -->
 
 
+
+  </div>
     <script src="https://cdn.tailwindcss.com"></script>     
   </body>
 </html>
